test/scc_test/exp/semantic-errors/018.a
018.t:3:6: error: expression must be an lvalue or function designator